# szurubooru-bot

./: .dockerignore  .gitignore  Dockerfile  bot.py  compose.yaml  fix-artist-twitter-tags.diff  pyproject.toml
cogs/: booru.py  errors.py
