[project]
name = "szurubooru-bot"
version = "0.1.0"
description = "Discord bot to upload from twitter/URLs to a szurubooru instance."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp[speedups]>=3.10.10",
    "discord-py[speed]>=2.4.0",
    "gallery-dl>=1.27.7",
    "jishaku>=2.6.0",
    "pyszuru>=0.3.1",
    "yt-dlp>=2024.10.22",
]

[tool.pyright]
exclude = ["**/__pycache__", "build", "dist", "docs", ".venv"]
include = ["cogs/", "bot.py"]
pythonVersion = "3.11"
reportUnnecessaryTypeIgnoreComment = "warning"
reportUnusedImport = "error"
typeCheckingMode = "basic"
venv = ".venv/"
venvPath = "."

[tool.ruff]
fix = true
line-length = 120
target-version = "py311"

[tool.ruff.lint]
ignore = [
    "S101", # Ignore assert
    "TRY002", # Ignore bare exception
    "TRY003", # Ignore base exception long message
]
select = [
    # flake8-2020
    "YTT", # flake8-bandit
    "S",   # flake8-bugbear
    "B",   # flake8-builtins
    "A",   # flake8-comprehensions
    "C4",  # flake8-debugger
    "T10", # flake8-simplify
    "SIM", # isort
    "I",   # mccabe
    "C90", # pycodestyle
    "E",
    "W",   # pyflakes
    "F",   # pygrep-hooks
    "PGH", # pyupgrade
    "UP",  # ruff
    "RUF", # tryceratops
    "TRY",
]

[tool.ruff.format]
preview = true

[tool.uv]
dev-dependencies = [
    "pyright>=1.1.386",
    "ruff>=0.7.1",
]
